syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="PrivateNotice";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_privacyNotice{
	//
	message PrivacyNotice{
		string uuid = 1;	 //,uuid,Long,不校验,是,
		string pageTitle = 2;	 //,页面标题,String,不校验,是,
		string noticeTitle = 3;	 //,公告标题,String,不校验,是,
		string noticeContent = 4;	 //,公告内容,Long,不校验,是,
		string type = 5;	 //,公告类型,Long,不校验,是,
		string status = 6;	 //,平台,Long,不校验,是,
		string id=7; //,承诺id,String,不校验,是
		string commitContent = 8;	 //,承诺函内容,Long,不校验,是,
		string buttonTitle=9; //,按钮标题,String,不校验，是,
	}


	PrivacyNotice privacyNotice = 1;

	string force=2; //true-强制，false-非强制。

    }

    message Ret_PBAPP_privacyNotice{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_privacyNotice data=3;


}

message REQ_PBAPP_privacyNotice{
	//

}