syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="UnReadMes";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_unreadMes{
	//
	message UnreadMes{
		string iconsuuid = 1;	 //图标uuid
		string mesCount = 2;	 //角标数

	}


	repeated UnreadMes mesList = 1;


}

message Ret_PBAPP_unreadMes{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_unreadMes data=3;


}

message REQ_PBAPP_unreadMes{

	string iconsUuids = 1; //轮询图标uuid

	string fundAccount = 2; //用户资金账号


}